acmacs.r NEWS -- history of user-visible changes.

* Changes in 3.1 (2019-05-13)

* Changes in 3.0 (2019-05-10)
** Workaround for libomp mutliple initialiation issue and corresponding crash
** Checking titer value when it is set (negative and non-integer titers forbidden)
** chart$name returns just name, can be empty if it was not set
** chart$column_bases() method takes a 1-based projection number
** use projection$set_transformation(matrix(...)), projection$transformation <- matrix(...) does not work (bug in Rcpp?)
** error message about locationdb absence suppressed
** set the column basis for each serum individually
** applying procrustes (transformation and translation) to layout (R matrix)
** getting titers of layers
** matching antigens and sera in two charts
** stress object access for making custom optimisers
** map resolution test

* Changes in 2.99.1 (2019-04-30)
** Avoiding libomp double initialisation error by using libomp coming with R under macOS
** Using R 3.6 and Rcpp 1.0.1

* Changes in 2.11 (2018-11-27)
** getting transformation of projection (2D and 3D)
** setting transformation of projection (2D and 3D)
** procrustes for just antigens or just sera
** reorient projection of a chart to a master projection (of the same or different chart)

* Changes in 2.10 (2018-11-13)
** merging tables
** incremental merge
** frozen merge
** overlay merge
** titer merge diagnostics

* Changes in 2.9 (2018-11-07)
** randomizing layout of a projection (projection$randomize_layout())
** running optimization step by step (projection$relax_one_iteration())

* Changes in 2.8 (2018-10-19)
** bug fix in reading layered charts made by acmacs-web


* Changes in 2.7 (2018-10-17)
** R 3.5.1
** single thread variant of the grid test
** remove all projections in the chart (chart$remove_all_projections())
** remove all projections except one in the chart (chart$remove_all_projections_except(number))
** get number of layers (chart$titers$number_of_layers)